# 5DOF-CrewAI-Backend

./: .gitignore  11LABSTOOLSPEC.md  CHANGELOG.md  README.md  cleanup.py  design-sync-summary.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  sample_podcast_script.md  setup.py  setup_env.sh  test_imports.py  verify_yaml.py
CrewAI/: .gitignore  README.md  __init__.py  main.py
CrewAI/agents/gistaApp_agents/: gista_agent_directories.py  gista_agents.py  voice_generation_agent.py
CrewAI/config/: settings.py  topics.py  voice_config.yaml
CrewAI/tasks/: crewAI_tasks.py
CrewAI/tasks/gistaApp_tasks/: gista_tasks.py
CrewAI/tests/: test_elevenlabs_tool.py  test_gista_workflow.py  test_multiAgent_toolUse.py  test_travelGuide_agents.py
CrewAI/tools/: ticket_search_tool.py  travel_guide_tool.py
CrewAI/tools/gista_tools/: Tools-Task-README.md  elevenLabs_voiceover_tool.py  gista_general_tools.py  script_parser_tool.py  transcription_tool.py
crewai_backend.egg-info/: SOURCES.txt  requires.txt
db/: chroma.sqlite3
firebase/: .firebaserc  firebase.json  firebase.json.template
firebase/functions/: .env.example  .gitignore  .gitignore 2  DATABASE_STRUCTURE.md  README.md  SUBCOLLECTIONS_MIGRATION.md  firebase.json  package-lock.json  package.json  requirements-test.txt  test-api.sh  test_api.py  tsconfig.json
firebase/functions/lib/: index.js  index.js.map
src/CrewAI/: .gitignore  README.md  __init__.py  main.py
src/crewai_backend.egg-info/: SOURCES.txt  requires.txt
tests/: check_gist_status.js
(+70 files in other folders)
