[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-backend"
version = "0.1.0"
description = "A CrewAI backend implementation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "crewai==0.28.8",
    "crewai_tools==0.1.6",
    "langchain_community==0.0.29",
    "python-dotenv==1.0.0",
    "huggingface_hub==0.20.3",
    "cohere==4.47",
    "unittest2==1.1.0",
    "notebook==7.1.0",
    "openai>=1.3.0",
    "langchain>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 